--- a/30 - Whack A Mole/style.css
+++ b/30 - Whack A Mole/style.css
@@ -67,3 +67,15 @@ h1 {
 .hole.up .mole {
   top:0;
 }
+
+.button-wrapper {
+  text-align: center;
+}
+
+.button-wrapper button {
+  background:rgba(255,255,255,0.2);
+  font-family: 'Amatic SC', cursive;
+  font-weight: bold;
+  font-size: 5rem;
+  border: 1px pink solid;
+}
